# skeleton-django-postgres-docker

./: .env.example  .gitignore  README.md  commandlines.txt  commands.py  docker-compose.yml  manage.py  pyproject.toml  skeleton.code-workspace
.envs/: .django  .postgres  .production.example.env
.envs/.local/: .SKELETON  .postgres
apps/things/migrations/: 0001_initial.py
apps/things/templates/things/: confirm_delete.html  create.html  detail.html  list.html  update.html
apps/things/tests/: conftest.py  factories.py  test_urls.py  test_views.py
apps/users/migrations/: 0001_initial.py
apps/users/templates/users/: login.html
compose/django/: Dockerfile  entrypoint.sh  start.sh
compose/jupyter/: start_notebook.sh
compose/local/django/: Dockerfile  entrypoint  start_notebook.sh
compose/postgres/: Dockerfile  backup.sh  restore.sh
config/: asgi.py  project.py  runners.py  settings.py  startup.py  urls.py  wsgi.py
config/settings/: base.py  develop.py  production.py  test.py
templates/: base.html
utils/: activate.ps1
