[tool.poetry]
name = "skeleton-django-postgres-docker"
version = "0.2.0"
description = "providing a basic django structure to start your projects with a dockerized CRUD app and postgres"
authors = ["oryon-dominik <oryon@cyberise.de>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^3.2.8"
django-environ = "^0.4.5"
django-extensions = "^2.2.9"
django-crispy-forms = "^1.13.0"
psycopg2 = "^2.9.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
hide_code = "^0.5.6"

[build-system]
requires = ["poetry-core>=1.0.7"]
build-backend = "poetry.core.masonry.api"
